--- a/public_html/btc.html
+++ b/public_html/btc.html
@@ -11,6 +11,7 @@
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="stylesheet" href="css/crypto.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -24,13 +25,23 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
+				<section id="splash" data-background-color="#ffffff">
 					<h1>Cryptocurrencies</h1>
 					<h3>An Earthling Interactive Tech Talk</h3>
 					<h4>By Don Smith &amp; Dan Stevens</h4>
+					<img data-src="/img/logo-splash.png" class="splash">
 				</section>
-				<section data-markdown="slides/content/slide-0001.md"></section>
-				<section data-markdown="slides/content/slide-0002.md"></section>
+				<section id="intro">
+					<section data-markdown="slides/content/01-intro/slide-0001.md"></section>
+					<section data-markdown="slides/content/01-intro/slide-0002.md"></section>
+					<section data-markdown="slides/content/01-intro/slide-0003.md"></section>
+				</section>
+				<section id="overview">
+					<section data-markdown="slides/content/02-overview/slide-0001.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0002.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0003.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0004.md"></section>
+				</section>
 			</div>
 		</div>
 
@@ -42,6 +53,7 @@
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+				history: true,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
