--- a/public_html/btc.html
+++ b/public_html/btc.html
@@ -41,6 +41,17 @@
 					<section data-markdown="slides/content/02-overview/slide-0002.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0003.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0004.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0005.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0006.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0007.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0008.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0009.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0010.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0011.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0012.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0013.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0014.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0015.md"></section>
 				</section>
 			</div>
 		</div>
