--- a/public_html/btc.html
+++ b/public_html/btc.html
@@ -28,7 +28,7 @@
 				<section id="splash" data-background-color="#ffffff">
 					<h1>Cryptocurrencies</h1>
 					<h3>An Earthling Interactive Tech Talk</h3>
-					<h4>By Don Smith &amp; Dan Stevens</h4>
+					<h4>By Don Smith</h4>
 					<img data-src="/img/logo-splash.png" class="splash">
 				</section>
 				<section id="intro">
@@ -52,6 +52,8 @@
 					<section data-markdown="slides/content/02-overview/slide-0013.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0014.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0015.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0016.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0017.md"></section>
 				</section>
 			</div>
 		</div>
