--- a/public_html/btc.html
+++ b/public_html/btc.html
@@ -55,6 +55,10 @@
 					<section data-markdown="slides/content/02-overview/slide-0016.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0017.md"></section>
 				</section>
+				<section id="bitcoin">
+					<section data-markdown="slides/content/03-bitcoin/slide-0001.md" data-background-color="#ffffff"></section>
+					<section data-markdown="slides/content/03-bitcoin/slide-0002.md"></section>
+				</section>
 			</div>
 		</div>
 
