more btc specific info

--- a/public_html/crypto.html
+++ b/public_html/crypto.html
@@ -58,6 +58,11 @@
 				<section id="bitcoin">
 					<section data-markdown="slides/content/03-bitcoin/slide-0001.md" data-background-color="#ffffff"></section>
 					<section data-markdown="slides/content/03-bitcoin/slide-0002.md"></section>
+					<section data-markdown="slides/content/03-bitcoin/slide-0003.md"></section>
+					<section data-markdown="slides/content/03-bitcoin/slide-0004.md"></section>
+					<section data-markdown="slides/content/03-bitcoin/slide-0005.md"></section>
+					<section data-markdown="slides/content/03-bitcoin/slide-0006.md"></section>
+					<section data-markdown="slides/content/03-bitcoin/slide-0007.md"></section>
 				</section>
 			</div>
 		</div>
