last fixes. go home me

--- a/public_html/crypto.html
+++ b/public_html/crypto.html
@@ -26,9 +26,9 @@
 		<div class="reveal">
 			<div class="slides">
 				<section id="splash" data-background-color="#ffffff">
-					<h1>Cryptocurrencies</h1>
-					<h3>An Earthling Interactive Tech Talk</h3>
-					<h4>By Don Smith</h4>
+					<h1>To The Moon!</h1>
+					<h5>An Earthling Interactive<br/>Cryptocurrency Tech Talk</h5>
+					<small>By Don Smith</small>
 					<img data-src="/img/logo-splash.png" class="splash">
 				</section>
 				<section id="intro">
