btc overview, reorg and clarify earlier slides

--- a/public_html/crypto.html
+++ b/public_html/crypto.html
@@ -37,6 +37,7 @@
 					<section data-markdown="slides/content/01-intro/slide-0003.md"></section>
 				</section>
 				<section id="overview">
+					<section data-markdown="slides/content/02-overview/slide-0000.md" data-background-color="#ffffff"></section>
 					<section data-markdown="slides/content/02-overview/slide-0001.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0002.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0003.md"></section>
@@ -54,6 +55,7 @@
 					<section data-markdown="slides/content/02-overview/slide-0015.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0016.md"></section>
 					<section data-markdown="slides/content/02-overview/slide-0017.md"></section>
+					<section data-markdown="slides/content/02-overview/slide-0018.md"></section>
 				</section>
 				<section id="bitcoin">
 					<section data-markdown="slides/content/03-bitcoin/slide-0001.md" data-background-color="#ffffff"></section>
@@ -63,6 +65,10 @@
 					<section data-markdown="slides/content/03-bitcoin/slide-0005.md"></section>
 					<section data-markdown="slides/content/03-bitcoin/slide-0006.md"></section>
 					<section data-markdown="slides/content/03-bitcoin/slide-0007.md"></section>
+					<section data-markdown="slides/content/03-bitcoin/slide-0008.md"></section>
+				</section>
+				<section id="altcoins">
+					<section data-markdown="slides/content/04-altcoins/slide-0001.md" data-background-color="#ffffff"></section>
 				</section>
 			</div>
 		</div>
