added more alt and other cryptos

--- a/public_html/crypto.html
+++ b/public_html/crypto.html
@@ -69,6 +69,10 @@
 				</section>
 				<section id="altcoins">
 					<section data-markdown="slides/content/04-altcoins/slide-0001.md" data-background-color="#ffffff"></section>
+					<section data-markdown="slides/content/04-altcoins/slide-0002.md"></section>
+					<section data-markdown="slides/content/04-altcoins/slide-0003.md"></section>
+					<section data-markdown="slides/content/04-altcoins/slide-0004.md"></section>
+					<section data-markdown="slides/content/04-altcoins/slide-0005.md"></section>
 				</section>
 			</div>
 		</div>
