finish alts, work on concerns

--- a/public_html/crypto.html
+++ b/public_html/crypto.html
@@ -25,13 +25,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section id="splash" data-background-color="#ffffff">
-					<h1>To The Moon!</h1>
-					<h5>An Earthling Interactive<br/>Cryptocurrency Tech Talk</h5>
-					<small>By Don Smith</small>
-					<img data-src="/img/logo-splash.png" class="splash">
-				</section>
 				<section id="intro">
+					<section data-markdown="slides/content/01-intro/slide-0000.md" data-background-color="#ffffff"></section>
 					<section data-markdown="slides/content/01-intro/slide-0001.md"></section>
 					<section data-markdown="slides/content/01-intro/slide-0002.md"></section>
 					<section data-markdown="slides/content/01-intro/slide-0003.md"></section>
@@ -73,6 +68,10 @@
 					<section data-markdown="slides/content/04-altcoins/slide-0003.md"></section>
 					<section data-markdown="slides/content/04-altcoins/slide-0004.md"></section>
 					<section data-markdown="slides/content/04-altcoins/slide-0005.md"></section>
+				</section>
+				<section id="concers">
+					<section data-markdown="slides/content/05-concerns/slide-0001.md" data-background-color="#ffffff"></section>
+					<section data-markdown="slides/content/05-concerns/slide-0002.md"></section>
 				</section>
 			</div>
 		</div>
