clean up, usage section

--- a/public_html/crypto.html
+++ b/public_html/crypto.html
@@ -69,9 +69,15 @@
 					<section data-markdown="slides/content/04-altcoins/slide-0004.md"></section>
 					<section data-markdown="slides/content/04-altcoins/slide-0005.md"></section>
 				</section>
-				<section id="concers">
+				<section id="concerns">
 					<section data-markdown="slides/content/05-concerns/slide-0001.md" data-background-color="#ffffff"></section>
 					<section data-markdown="slides/content/05-concerns/slide-0002.md"></section>
+					<section data-markdown="slides/content/05-concerns/slide-0003.md"></section>
+				</section>
+				<section id="using">
+					<section data-markdown="slides/content/06-using/slide-0001.md" data-background-color="#ffffff"></section>
+					<section data-markdown="slides/content/06-using/slide-0002.md"></section>
+					<section data-markdown="slides/content/06-using/slide-0003.md"></section>
 				</section>
 			</div>
 		</div>
