cleanup and final slides

--- a/public_html/crypto.html
+++ b/public_html/crypto.html
@@ -26,10 +26,11 @@
 		<div class="reveal">
 			<div class="slides">
 				<section id="intro">
-					<section data-markdown="slides/content/01-intro/slide-0000.md" data-background-color="#ffffff"></section>
-					<section data-markdown="slides/content/01-intro/slide-0001.md"></section>
+					<section data-markdown="slides/content/01-intro/slide-0001.md" data-background-color="#ffffff"></section>
 					<section data-markdown="slides/content/01-intro/slide-0002.md"></section>
 					<section data-markdown="slides/content/01-intro/slide-0003.md"></section>
+					<section data-markdown="slides/content/01-intro/slide-0004.md"></section>
+					<section data-markdown="slides/content/01-intro/slide-0005.md"></section>
 				</section>
 				<section id="overview">
 					<section data-markdown="slides/content/02-overview/slide-0000.md" data-background-color="#ffffff"></section>
@@ -78,6 +79,10 @@
 					<section data-markdown="slides/content/06-using/slide-0001.md" data-background-color="#ffffff"></section>
 					<section data-markdown="slides/content/06-using/slide-0002.md"></section>
 					<section data-markdown="slides/content/06-using/slide-0003.md"></section>
+				</section>
+				<section id="conclusion">
+					<section data-markdown="slides/content/07-conclusion/slide-0001.md" data-background-color="#ffffff"></section>
+					<section data-markdown="slides/content/07-conclusion/slide-0002.md" data-background-color="#ffffff"></section>
 				</section>
 			</div>
 		</div>
